@@ -29,6 +29,7 @@ $ -> Language fix or change
 
 08-May-2010 Jean-Marie Simonet
 $ Consolidated some strings
+# Corrected double translation in jgrid
 
 07-May-2010 Ian MacLennan
 # Fixed error in JString::strspn that caused unit tests to fail on systems without mbstring
